# olist-pipeline

./: .env.example  .gitignore  Dockerfile.mlflow  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml
config/: db_config.example.json  schema.sql
dags/: olist_demand_dag.py
data/interim/: monthly_base.parquet
data/monthly/: README.txt
data/raw/: test.py
docs/: 03_notebook_explicacion_detallada.md  guion_exposicion_5min.md
reports/metrics/: 01_base_models_metrics.csv  02_optimized_models_metrics.csv  03_naive_proxy_importance.csv  04_arima_optuna_search_validation.csv  05_arima_hyperparameter_effect.csv  06_arima_parameter_proxy_importance.csv  07_final_selection_by_category.csv  08_selected_predictions.csv  09_summary_base_models.csv  10_summary_optimized_models.csv  11_summary_selected_models.csv  12_optuna_naive_trials.csv  13_optuna_arima_trials.csv  14_report_model_optimization_optuna_pro.md  arima_results_by_category.csv  pipeline_summary.json
src/: generate_synthetic.py
src/dashboard/: app.py
src/dashboard/.streamlit/: config.toml
src/data/: build_master_table.py  clean_data.py  extract.py  ingest_monthly.py  migrate.py  run_eda.py
src/features/: build_features.py  build_monthly_base.py  select_features.py
src/models/: arima_model.py  arima_optuna_model.py  evaluate.py  train.py
src/new_data/: cleaning_eda_olist_mastertable.py  monthly_base_olist.csv  results_arima_olist.csv
src/simulation/: business_metrics_simulation.csv  simulation_detail.csv
