[project]
name = "olist-pipeline"
version = "1.0.0"
description = "Olist demand forecasting pipeline — Airflow + MariaDB + MLflow"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.3",
    "lightgbm>=4.6.0",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.3",
    "polars>=1.41.1",
    "scikit-learn>=1.7.0",
    "shap>=0.51.0",
    "statsmodels>=0.14.0",
    "optuna>=4.9.0",
]
